
<resources>
    <string name="app_name">FlexingFinalSpace</string>

    <string name="nav_characters">Characters</string>
    <string name="nav_episodes">Episodes</string>
    <string name="nav_quotes">Quotes</string>
    <string name="nav_details">Details</string>
    <string name="text_species">Species: %1$s</string>
    <string name="text_gender">Gender: %1$s</string>
    <string name="text_hair">Hair color: %1$s</string>
    <string name="text_origin">Origin: %1$s</string>
    <string name="text_abilities">Abilities: %1$s</string>
    <string name="text_alias">Alias: %1$s</string>
    <string name="text_director">Director: %1$s</string>
    <string name="text_writer">Writer: %1$s</string>

    <string name="text_error">Error fetching data: %1$s</string>
    <string name="text_default_error">No internet connection</string>
    <string name="text_details_error">An error occurred when fetching details</string>

    <string name="text_alive">Alive</string>
    <string name="text_deceased">Deceased</string>
    <string name="text_unknown">Unknown</string>
</resources>